--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    hello
+<head>   
+    <link rel="stylesheet" href="style/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jacob E. Lara</title>
 </head>
+ <header id="Top"
+    <h1> Jacob E. Lara </h1>
+    <nav>
+        <a href="/about.html"> About </a>
+        <a href="/contact.html"> Contact </a>
+        <a href="/projects.html"> Projects </a>
+    </nav>
+</header>
 <body>
-    
+
+
+
 </body>
 </html>
