--- a/about.html
+++ b/about.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style/about.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1> ABOUT </h1>
+    <header>
+    <h1> My name is Jacob Eugene Lara.</h1>
+    </header>
+       <p> I am a Web Developer student for Lambda School!
+Youngest developer in my family and am trying to prosper in the coding industry along side my family.
+        </p>
 </body>
 </html>
