--- a/index.html
+++ b/index.html
@@ -6,17 +6,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacob E. Lara</title>
 </head>
- <header id="Top"
-    <h1> Jacob E. Lara </h1>
-    <nav>
-        <a href="/about.html"> About </a>
-        <a href="/contact.html"> Contact </a>
-        <a href="/projects.html"> Projects </a>
-    </nav>
-</header>
 <body>
-
-
-
+    <div class="container">
+        <header>
+            <h1> Jacob E. Lara</h1>
+            <nav>
+                <a href="index.html"> Home</a>
+                <a href="about.html">About</a>
+                <a href="projects.html"> Projects</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <main>
+            <section class="cta">
+                <div class="ctaimage">
+                    <img src="https://picsum.photos/400" alt="random">
+                </div>
+                <article>
+                    <div>
+                        <h2>Jacob Lara</h2>
+                        <button>My projects</button>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium, fuga ex a illum tenetur consequatur praesentium culpa obcaecati enim voluptatem vero laborum sapiente nam! Quaerat dolor aspernatur vero temporibus, iusto rem voluptatem velit incidunt, optio itaque tenetur officiis blanditiis odio!
+                        </p>
+                    </div>
+                </article>
+            </section>
+            <section class="gallery">
+                <article>
+                    <img src="https://picsum.photos/150" alt="random">
+                    <p>
+                        Lorem ipsum dolor sit amet.
+                    </p>
+                </article>
+                <article>
+                    <img src="https://picsum.photos/157" alt="random">
+                    <p>
+                        Lorem ipsum dolor sit amet.
+                    </p>
+                </article>
+                <article>
+                    <img src="https://picsum.photos/156" alt="random">
+                    <p>
+                        Lorem ipsum dolor sit amet.
+                    </p>
+                </article>
+                <article>
+                    <img src="https://picsum.photos/155" alt="random">
+                    <p>
+                        Lorem ipsum dolor sit amet.
+                    </p>
+                </article>
+                <article>
+                    <img src="https://picsum.photos/154" alt="random">
+                    <p>
+                        Lorem ipsum dolor sit amet.
+                    </p>
+                </article>
+                <article>
+                    <img src="https://picsum.photos/153" alt="random">
+                    <p>
+                        Lorem ipsum dolor sit amet.
+                    </p>
+                </article>
+                <article>
+                    <img src="https://picsum.photos/152" alt="random">
+                    <p>
+                        Lorem ipsum dolor sit amet.
+                    </p>
+                </article>
+                <article>
+                    <img src="https://picsum.photos/151" alt="random">
+                    <p>
+                        Lorem ipsum dolor sit amet.
+                    </p>
+                </article>
+            </section>
+        </main>
+        <footer>
+            <p>
+                Author: Jacob E. Lara <br>
+                <a href="Jacob.lara1221@gmail.com"> <button>Email</button> </a>
+            </p>
+        </footer>
+    </div>
 </body>
 </html>
